<resources>
    <string name="app_name">新闻视界</string>
    <string name="tx_login">点击登录</string>
    <string name="tx_first_item">QQ空间</string>
    <string name="tx_second_item">新浪微博</string>
    <string name="tx_third_item">微信朋友圈</string>
    <string name="tx_setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
